--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -15,6 +15,8 @@ Vagrant.configure(2) do |config|
   # Give a reasonable amount of cpu and memory to the VM
   config.vm.provider "virtualbox" do |vb|
     vb.name = hostname # Name in VirtualBox
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     vb.memory = 4096
     vb.cpus = 2
   end
