Improving installation instructions

--- a/gpdb/gppkg_spec.yml.in
+++ b/gpdb/gppkg_spec.yml.in
@@ -9,7 +9,7 @@ PostInstall:
           echo '==========================================================================';
           echo 'PL/R installation is complete! To proceed, follow these steps:';
           echo '1. Source your new $GPHOME/greenplum_path.sh file and restart the database.';
-          echo '2. Enable PL/R language in one of your databases by running \"psql -f $GPHOME/share/postgresql/plr.sql -d mydatabase\"';
-          echo 'Alternatively you can run \"createlang plr -d mydatabase\", but in this case';
-          echo 'you would not have R-specific in-database functions';
+          echo '2. Create PL/R language in the target database with \"createlang plr -d mydatabase\"';
+          echo '3. Optionally you can enable PL/R helper functions in this database by running ';
+          echo '    \"psql -f $GPHOME/share/postgresql/contrib/plr.sql -d mydatabase\"';
           echo '==========================================================================';"
