Updated variable names for pipeline.yml [#129650651]
Signed-off-by: Lisa Owen <lowen@pivotal.io>

--- a/concourse/pipeline.yml
+++ b/concourse/pipeline.yml
@@ -34,21 +34,21 @@ resources:
   source:
     branch: 4.3_STABLE
     uri: git@github.com:greenplum-db/gpdb4.git
-    private_key: {{gpdblanguages_private_key}}
+    private_key: {{gpdb-git-key}}
 
 - name: gpdb_src
   type: git
   source:
     branch: master
     uri: git@github.com:greenplum-db/gpdb.git
-    private_key: {{gpdblanguages_private_key}}
+    private_key: {{gpdb-git-key}}
 
 - name: plr_src
   type: git
   source:
     branch: master
     uri: git@github.com:greenplum-db/plr.git
-    private_key: {{gpdblanguages_private_key}}
+    private_key: {{gpdb-git-key}}
 
 #################################
 ########### CentOS 7 ############
