use gpver to set the version in the gppkg so that we are building the package for the correct version of GPDB

--- a/gpdb/gppkg_spec.yml.in
+++ b/gpdb/gppkg_spec.yml.in
@@ -2,7 +2,7 @@ Pkgname: plr
 Architecture: #arch
 OS: #os
 Version: #gppkgver
-GPDBVersion: 5.0
+GPDBVersion: #gpver
 Description: Provides a procedural language implementation of R for the Greenplum Database. 
 PostInstall:
 - Master: "echo '-';
