--- a/concourse/pipeline/pipeline.yml
+++ b/concourse/pipeline/pipeline.yml
@@ -1,6 +1,47 @@
 ## ======================================================================
 ## Pipeline for GPDB PL/R GPPKG
 ## ======================================================================
+
+groups:
+- name: All
+  jobs:
+    - Build_R_CENTOS7
+    - Build_R_CENTOS6
+    - Build_R_SUSE11
+    - plr_centos7_build
+    - plr_centos6_build
+    - plr_suse11_build
+    - plr_centos6_test
+    - plr_centos7_test
+    - plr_suse11_test
+    - GPDB4_Build_R_CENTOS5
+    - GPDB4_Build_R_SUSE11
+    - gpdb4_plr_centos5_build
+    - gpdb4_plr_suse11_build
+    - gpdb4_plr_centos5_test
+    - gpdb4_plr_suse11_test
+
+- name: GPDB5
+  jobs:
+    - Build_R_CENTOS7
+    - Build_R_CENTOS6
+    - Build_R_SUSE11
+    - plr_centos7_build
+    - plr_centos6_build
+    - plr_suse11_build
+    - plr_centos6_test
+    - plr_centos7_test
+    - plr_suse11_test
+
+- name: GPDB4
+  jobs:
+    - GPDB4_Build_R_CENTOS5
+    - GPDB4_Build_R_SUSE11
+    - gpdb4_plr_centos5_build
+    - gpdb4_plr_suse11_build
+    - gpdb4_plr_centos5_test
+    - gpdb4_plr_suse11_test
+
 resources:
 
 # Image Resources
@@ -23,6 +64,12 @@ resources:
     repository: pivotaldata/sles-gpdb-dev
     tag: '11-beta'
 
+- name: centos-gpdb-dev-5
+  type: docker-image
+  source:
+    repository: pivotaldata/centos-gpdb-dev
+    tag: '5'
+
 # Github Source Codes
 
 - name: gpdb_src
@@ -34,7 +81,7 @@ resources:
 - name: plr_src
   type: git
   source:
-    branch: gpdb5_clean
+    branch: gpdb_release 
     uri: https://github.com/greenplum-db/plr.git
 
 # centos 7
@@ -42,11 +89,11 @@ resources:
 - name: bin_r_centos7
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: gppkg/r/bin_r_centos7.tar.gz
+    versioned_file: build/gpdb5/r/bin_r_centos7.tar.gz
 
 
 - name: bin_gpdb_centos7
@@ -61,31 +108,31 @@ resources:
 - name: plr_gpdb_centos7_build
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: gppkg/plr/build/plr-centos7.gppkg
+    versioned_file: build/gpdb5/plr/plr-centos7.gppkg
 
 - name: plr_gpdb_centos7_release
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    regexp: gppkg/plr/release/plr-ossv(.*)-rhel7-x86_64.gppkg
+    regexp: release/gpdb5/plr/plr-(.*)-rhel7-x86_64.gppkg
 
 # centtos 6
 
 - name: bin_r_centos6
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: gppkg/r/bin_r_centos6.tar.gz
+    versioned_file: build/gpdb5/r/bin_r_centos6.tar.gz
 
 - name: bin_gpdb_centos6
   type: s3
@@ -99,31 +146,31 @@ resources:
 - name: plr_gpdb_centos6_build
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: gppkg/plr/build/plr-centos6.gppkg
+    versioned_file: build/gpdb5/plr/plr-centos6.gppkg
 
 - name: plr_gpdb_centos6_release
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    regexp: gppkg/plr/release/plr-ossv(.*)-rhel6-x86_64.gppkg
+    regexp: release/gpdb5/plr/plr-(.*)-rhel6-x86_64.gppkg
 
 # suse11
 
 - name: bin_r_suse11
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: gppkg/r/bin_r_suse11.tar.gz
+    versioned_file: build/gpdb5/r/bin_r_suse11.tar.gz
 
 - name: bin_gpdb_suse11
   type: s3
@@ -137,20 +184,101 @@ resources:
 - name: plr_gpdb_suse11_build
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: gppkgs/gpdb/plr-suse11.gppkg
+    versioned_file: build/gpdb5/plr/plr-suse11.gppkg
 
 - name: plr_gpdb_suse11_release
   type: s3
   source:
-    bucket: {{bucket-name}}
+    bucket: {{pl-bucket-name}}
     region_name: {{aws-region}}
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
-    regexp: gppkg/plr/release/plr-ossv(.*)-sles11-x86_64.gppkg
+    regexp: release/gpdb5/plr/plr-(.*)-sles11-x86_64.gppkg
+
+
+# gpdb4 resources
+
+- name: bin_gpdb4_centos5
+  type: s3
+  source:
+    bucket: {{gpdb4-bucket-name}}
+    region_name: {{gpdb4-aws-region}}
+    access_key_id: {{gpdb4-bucket-access-key-id}}
+    secret_access_key: {{gpdb4-bucket-secret-access-key}}
+    versioned_file: bin_gpdb_centos/bin_gpdb.tar.gz
+
+# suse gpdb
+
+- name: bin_gpdb4_suse11
+  type: s3
+  source:
+    bucket: {{gpdb4-bucket-name}}
+    region_name: {{gpdb4-aws-region}}
+    access_key_id: {{gpdb4-bucket-access-key-id}}
+    secret_access_key: {{gpdb4-bucket-secret-access-key}}
+    versioned_file: bin_gpdb_sles/bin_gpdb.tar.gz
+
+# centos 5
+
+- name: gpdb4_bin_r_centos5
+  type: s3
+  source:
+    bucket: {{pl-bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: build/gpdb4/r/bin_r_centos5.tar.gz
+
+- name: plr_gpdb4_centos5_build
+  type: s3
+  source:
+    bucket: {{pl-bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: build/gpdb4/plr/plr-centos5.gppkg
+
+- name: plr_gpdb4_centos5_release
+  type: s3
+  source:
+    bucket: {{pl-bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    regexp: release/gpdb4/plr/plr-(.*)-rhel5-x86_64.gppkg
+
+# suse11
+
+- name: gpdb4_bin_r_suse11
+  type: s3
+  source:
+    bucket: {{pl-bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: build/gpdb4/r/bin_r_suse11.tar.gz
+
+- name: plr_gpdb4_suse11_build
+  type: s3
+  source:
+    bucket: {{pl-bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: build/gpdb4/plr/plr-suse11.gppkg
+
+- name: plr_gpdb4_suse11_release
+  type: s3
+  source:
+    bucket: {{pl-bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    regexp: release/gpdb4/plr/plr-(.*)-sles11-x86_64.gppkg
 
 ## ======================================================================
 ## jobs
@@ -239,6 +367,7 @@ jobs:
         bin_plr: plr_gpdb_centos7_build
       params:
         OSVER: centos7
+        GPDBVER: GPDB-5.0.0
   - aggregate:
     - put: plr_gpdb_centos7_build
       params:
@@ -266,6 +395,7 @@ jobs:
         bin_plr: plr_gpdb_centos6_build
       params:
         OSVER: centos6
+        GPDBVER: GPDB-5.0.0
   - aggregate:
     - put: plr_gpdb_centos6_build
       params:
@@ -293,6 +423,7 @@ jobs:
         bin_plr: plr_gpdb_suse11_build
       params:
         OSVER: suse11
+        GPDBVER: GPDB-5.0.0
   - aggregate:
     - put: plr_gpdb_suse11_build
       params:
@@ -320,7 +451,7 @@ jobs:
         plr_gppkg: plr_gpdb_centos6_release
     params:
       OSVER: centos6
-      GPGBVER: GPDB-5.0.0
+      GPDBVER: GPDB-5.0.0
   - put: plr_gpdb_centos6_release
     params:
       file: plr_gpdb_centos6_release/plr-*.gppkg
@@ -345,7 +476,7 @@ jobs:
       plr_gppkg: plr_gpdb_centos7_release
     params:
       OSVER: centos7
-      GPGBVER: GPDB-5.0.0
+      GPDBVER: GPDB-5.0.0
   - put: plr_gpdb_centos7_release
     params:
       file: plr_gpdb_centos7_release/plr-*.gppkg
@@ -370,7 +501,158 @@ jobs:
       plr_gppkg: plr_gpdb_suse11_release
     params:
       OSVER: suse11
-      GPGBVER: GPDB-5.0.0
+      GPDBVER: GPDB-5.0.0
   - put: plr_gpdb_suse11_release
     params:
       file: plr_gpdb_suse11_release/plr-*.gppkg
+
+# GPDB4
+
+# Build R binaries
+
+- name: GPDB4_Build_R_CENTOS5
+  plan:
+  - aggregate:
+    - get: plr_src
+      trigger: true
+    - get: bin_gpdb4_centos5
+    - get: centos-gpdb-dev-5
+  - task: r_centos5_build
+    file: plr_src/concourse/tasks/build_r.yml
+    image: centos-gpdb-dev-5
+    output_mapping:
+      bin_r: gpdb4_bin_r_centos5
+    params:
+      OSVER: centos5
+  - put: gpdb4_bin_r_centos5
+    params:
+      file: gpdb4_bin_r_centos5/bin_r_centos5.tar.gz
+
+- name: GPDB4_Build_R_SUSE11
+  plan:
+  - aggregate:
+    - get: plr_src
+      trigger: true
+    - get: bin_gpdb4_suse11
+    - get: sles-gpdb-dev-11-beta
+  - task: r_suse11_build
+    file: plr_src/concourse/tasks/build_r.yml
+    image: sles-gpdb-dev-11-beta
+    output_mapping:
+      bin_r: gpdb4_bin_r_suse11
+    params:
+      OSVER: suse11
+  - put: gpdb4_bin_r_suse11
+    params:
+      file: gpdb4_bin_r_suse11/bin_r_suse11.tar.gz
+
+
+# Build PLR GPPKG
+
+- name: gpdb4_plr_centos5_build
+  max_in_flight: 3
+  plan:
+  - aggregate:
+    - get: centos-gpdb-dev-5
+    - get: plr_src
+      passed: [GPDB4_Build_R_CENTOS5]
+      trigger: true
+    - get: bin_gpdb4_centos5
+    - get: gpdb4_bin_r_centos5
+    - get: gpdb_src
+  - aggregate:
+    - task: Build_PLR
+      file: plr_src/concourse/tasks/build_plr.yml
+      image: centos-gpdb-dev-5
+      input_mapping:
+        bin_gpdb: bin_gpdb4_centos5
+        bin_r: gpdb4_bin_r_centos5
+      output_mapping:
+        bin_plr: plr_gpdb4_centos5_build
+      params:
+        OSVER: centos5
+        GPDBVER: GPDB4.3
+  - aggregate:
+    - put: plr_gpdb4_centos5_build
+      params:
+        file: plr_gpdb4_centos5_build/plr-*.gppkg
+
+- name: gpdb4_plr_suse11_build
+  max_in_flight: 3
+  plan:
+  - aggregate:
+    - get: plr_src
+      passed: [GPDB4_Build_R_SUSE11]
+      trigger: true
+    - get: sles-gpdb-dev-11-beta
+    - get: bin_gpdb4_suse11
+    - get: gpdb4_bin_r_suse11
+    - get: gpdb_src
+  - aggregate:
+    - task: Build_PLR
+      file: plr_src/concourse/tasks/build_plr.yml
+      image: sles-gpdb-dev-11-beta
+      input_mapping:
+        bin_gpdb: bin_gpdb4_suse11
+        bin_r: gpdb4_bin_r_suse11
+      output_mapping:
+        bin_plr: plr_gpdb4_suse11_build
+      params:
+        OSVER: suse11
+        GPDBVER: GPDB4.3
+  - aggregate:
+    - put: plr_gpdb4_suse11_build
+      params:
+        file: plr_gpdb4_suse11_build/plr-*.gppkg
+
+# Test PL/R GPPKG
+
+- name: gpdb4_plr_centos5_test
+  plan:
+  - aggregate:
+    - get: centos-gpdb-dev-5
+    - get: plr_src
+      passed: [gpdb4_plr_centos5_build]
+      trigger: true
+    - get: plr_gpdb4_centos5_build
+    - get: bin_gpdb4_centos5
+    - get: gpdb_src
+  - task: Test_PLR
+    file: plr_src/concourse/tasks/test_plr.yml
+    image: centos-gpdb-dev-5
+    input_mapping:
+      bin_gpdb: bin_gpdb4_centos5
+      bin_plr: plr_gpdb4_centos5_build
+    output_mapping:
+        plr_gppkg: plr_gpdb4_centos5_release
+    params:
+      OSVER: centos5
+      GPDBVER: GPDB4.3
+  - put: plr_gpdb4_centos5_release
+    params:
+      file: plr_gpdb4_centos5_release/plr-*.gppkg
+
+- name: gpdb4_plr_suse11_test
+  plan:
+  - aggregate:
+    - get: sles-gpdb-dev-11-beta
+    - get: plr_src
+      passed: [gpdb4_plr_suse11_build]
+      trigger: true
+    - get: plr_gpdb4_suse11_build
+    - get: bin_gpdb4_suse11
+    - get: gpdb_src
+  - task: Test_PLR
+    file: plr_src/concourse/tasks/test_plr.yml
+    image: sles-gpdb-dev-11-beta
+    input_mapping:
+      bin_gpdb: bin_gpdb4_suse11
+      bin_plr: plr_gpdb4_suse11_build
+    output_mapping:
+      plr_gppkg: plr_gpdb4_suse11_release
+    params:
+      OSVER: suse11
+      GPDBVER: GPDB4.3
+  - put: plr_gpdb4_suse11_release
+    params:
+      file: plr_gpdb4_suse11_release/plr-*.gppkg
