--- a/concourse/pipeline/pipeline-gpdb5.yml
+++ b/concourse/pipeline/pipeline-gpdb5.yml
@@ -133,7 +133,14 @@ resources:
     secret_access_key: {{bucket-secret-access-key}}
     versioned_file: build/gpdb5/plr/suse11/plr-devel.gppkg
 
-
+- name: xz
+  type: s3
+  source:
+    bucket: {{pl-bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: dependancy/xz-5.2.2.tar.gz
 ## jobs
 ## ======================================================================
 
@@ -149,6 +156,7 @@ jobs:
     - get: bin_gpdb_centos7
       trigger: true
     - get: centos-gpdb-dev-7
+    - get: xz
   - task: r_centos7_build
     file: plr_src/concourse/tasks/build_r.yml
     image: centos-gpdb-dev-7
@@ -168,6 +176,7 @@ jobs:
     - get: bin_gpdb_centos6
       trigger: true
     - get: centos-gpdb-dev-6
+    - get: xz
   - task: r_centos6_build
     file: plr_src/concourse/tasks/build_r.yml
     image: centos-gpdb-dev-6
@@ -186,6 +195,7 @@ jobs:
       trigger: true
     - get: bin_gpdb_suse11
       trigger: true
+    - get: xz
   - task: r_suse11_build
     file: plr_src/concourse/tasks/build_r_sles.yml
     output_mapping:
