--- a/concourse/pipeline/pipeline-release-gpdb5.yml
+++ b/concourse/pipeline/pipeline-release-gpdb5.yml
@@ -8,6 +8,9 @@ groups:
     - plr_centos6_release
     - plr_centos7_release
     - plr_suse11_release
+    - plr_centos6_test
+    - plr_centos7_test
+    - plr_suse11_test
 
 resources:
 
@@ -26,6 +29,12 @@ resources:
     tag: '7-gcc6.2-llvm3.7'
 
 # Github Source Codes
+
+- name: gpdb_src
+  type: git
+  source:
+    branch: {{gpdb-git-branch}}
+    uri: {{gpdb-git-remote}}
 
 - name: plr_src
   type: git
@@ -60,6 +69,16 @@ resources:
     secret_access_key: {{bucket-secret-access-key}}
     regexp: release/gpdb5/plr/plr-(.*)-rhel7-x86_64.gppkg
 
+
+- name: bin_gpdb_centos7
+  type: s3
+  source:
+    bucket: {{bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: bin_gpdb_centos7/bin_gpdb.tar.gz
+
 # centtos 6
 
 - name: plr_gpdb_centos6_build
@@ -80,6 +99,15 @@ resources:
     secret_access_key: {{bucket-secret-access-key}}
     regexp: release/gpdb5/plr/plr-(.*)-rhel6-x86_64.gppkg
 
+- name: bin_gpdb_centos6
+  type: s3
+  source:
+    bucket: {{bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: bin_gpdb_centos/bin_gpdb.tar.gz
+
 # suse11
 
 - name: plr_gpdb_suse11_build
@@ -99,6 +127,15 @@ resources:
     access_key_id: {{bucket-access-key-id}}
     secret_access_key: {{bucket-secret-access-key}}
     regexp: release/gpdb5/plr/plr-(.*)-sles11-x86_64.gppkg
+
+- name: bin_gpdb_suse11
+  type: s3
+  source:
+    bucket: {{bucket-name}}
+    region_name: {{aws-region}}
+    access_key_id: {{bucket-access-key-id}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: bin_gpdb_sles11/bin_gpdb.tar.gz
 
 ## ======================================================================
 ## jobs
@@ -167,4 +204,65 @@ jobs:
   - put: plr_gpdb_suse11_release
     params:
       file: plr_gpdb_suse11_release/plr-*.gppkg
+
+- name: plr_centos6_test
+  plan:
+  - aggregate:
+    - get: centos-gpdb-dev-6
+    - get: plr_src
+      resource: release_src
+    - get: plr_gpdb_centos6_release
+      passed: [plr_centos6_release]
+      trigger: true
+    - get: bin_gpdb_centos6
+    - get: gpdb_src
+  - task: Test_PLR
+    file: plr_src/concourse/tasks/test_plr.yml
+    image: centos-gpdb-dev-6
+    input_mapping:
+      bin_gpdb: bin_gpdb_centos6
+      bin_plr: plr_gpdb_centos6_release
+    params:
+      OSVER: centos6
+      GPDBVER: gp5
+
+- name: plr_centos7_test
+  plan:
+  - aggregate:
+    - get: centos-gpdb-dev-7
+    - get: plr_src
+      resource: release_src
+    - get: plr_gpdb_centos7_release
+      passed: [plr_centos7_release]
+      trigger: true
+    - get: bin_gpdb_centos7
+    - get: gpdb_src
+  - task: Test_PLR
+    file: plr_src/concourse/tasks/test_plr.yml
+    image: centos-gpdb-dev-7
+    input_mapping:
+      bin_gpdb: bin_gpdb_centos7
+      bin_plr: plr_gpdb_centos7_release
+    params:
+      OSVER: centos7
+      GPDBVER: gp5
+
+- name: plr_suse11_test
+  plan:
+  - aggregate:
+    - get: plr_src
+      resource: release_src
+    - get: plr_gpdb_suse11_release
+      passed: [plr_suse11_release]
+      trigger: true
+    - get: bin_gpdb_suse11
+    - get: gpdb_src
+  - task: Test_PLR
+    file: plr_src/concourse/tasks/test_plr_sles.yml
+    input_mapping:
+      bin_gpdb: bin_gpdb_suse11
+      bin_plr: plr_gpdb_suse11_release
+    params:
+      OSVER: suse11
+      GPDBVER: gp5
 
