Fork PLR gpdb6 branch for gpdb 6 release

--- a/concourse/pipeline/pipeline-release.yml
+++ b/concourse/pipeline/pipeline-release.yml
@@ -37,7 +37,7 @@ resources:
 - name: plr_src
   type: git
   source:
-    branch: master
+    branch: gpdb6
     uri: https://github.com/greenplum-db/plr.git
     tag_filter: 3.*
 
