--- a/concourse/pipeline/pipeline.yml
+++ b/concourse/pipeline/pipeline.yml
@@ -10,6 +10,12 @@ groups:
     - plr_centos6_test
     - plr_centos7_test
 
+resource_types:
+- name: gcs
+  type: docker-image
+  source:
+    repository: frodenas/gcs-resource
+
 resources:
 
 # Image Resources
@@ -52,13 +58,18 @@ resources:
     versioned_file: bin_gpdb_centos7/bin_gpdb.tar.gz
 
 - name: plr_gpdb_centos7_build
-  type: s3
+  type: gcs
   source:
-    bucket: {{pl-bucket-name}}
-    region_name: {{aws-region}}
-    access_key_id: {{bucket-access-key-id}}
-    secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: build/gpdb6/plr/centos7/plr-devel.gppkg
+    json_key: {{gcs-read-write-service-account-key}}
+    bucket: {{gcs-bucket-intermediates}}
+    versioned_file: plr/plr-centos7/gpdb6/plr-devel.gppkg
+
+- name: plr_gpdb_centos6_build
+  type: gcs
+  source:
+    json_key: {{gcs-read-write-service-account-key}}
+    bucket: {{gcs-bucket-intermediates}}
+    versioned_file: plr/plr-centos6/gpdb6/plr-devel.gppkg
 
 - name: bin_gpdb_centos6
   type: s3
@@ -69,14 +80,19 @@ resources:
     secret_access_key: {{bucket-secret-access-key}}
     versioned_file: bin_gpdb_centos/bin_gpdb.tar.gz
 
-- name: plr_gpdb_centos6_build
-  type: s3
+- name: plr_gpdb_centos7_bin
+  type: gcs
   source:
-    bucket: {{pl-bucket-name}}
-    region_name: {{aws-region}}
-    access_key_id: {{bucket-access-key-id}}
-    secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: build/gpdb6/plr/centos6/plr-devel.gppkg
+    json_key: {{gcs-read-write-service-account-key}}
+    bucket: {{gcs-bucket}}
+    versioned_file: plr/gpdb6/plr-rhel7.gppkg
+
+- name: plr_gpdb_centos6_bin
+  type: gcs
+  source:
+    json_key: {{gcs-read-write-service-account-key}}
+    bucket: {{gcs-bucket}}
+    versioned_file: plr/gpdb6/plr-rhel6.gppkg
 
 ## jobs
 ## ======================================================================
@@ -155,9 +171,15 @@ jobs:
     input_mapping:
       bin_gpdb: bin_gpdb_centos6
       bin_plr: plr_gpdb_centos6_build
+    output_mapping:
+      plr_gppkg: plr_gpdb_centos6_bin
     params:
       OSVER: centos6
       GPDBVER: gp6
+  - aggregate:
+    - put: plr_gpdb_centos6_bin
+      params:
+        file: plr_gppkg/plr-rhel6.gppkg 
 
 - name: plr_centos7_test
   plan:
@@ -175,7 +197,13 @@ jobs:
     input_mapping:
       bin_gpdb: bin_gpdb_centos7
       bin_plr: plr_gpdb_centos7_build
+    output_mapping:
+      plr_gppkg: plr_gpdb_centos7_bin
     params:
       OSVER: centos7
       GPDBVER: gp6
+  - aggregate:
+    - put: plr_gpdb_centos7_bin
+      params:
+        file: plr_gppkg/plr-rhel7.gppkg 
 
