Change to use gcs in pipeline.

--- a/concourse/pipeline/pipeline-release.yml
+++ b/concourse/pipeline/pipeline-release.yml
@@ -55,8 +55,8 @@ resources:
   type: gcs
   source:
     json_key: {{gcs-read-write-service-account-key}}
-    bucket: {{gcs-bucket-dev}}
-    versioned_file: plr/gpdb6/plr-rhel7.gppkg
+    bucket: {{gcs-bucket}}
+    versioned_file: plr/published/gpdb6/plr-rhel7.gppkg
 
 - name: plr_gpdb_centos7_release
   type: gcs
@@ -73,13 +73,11 @@ resources:
     regexp: plr/published/gpdb6/plr-(.*)-rhel7-x86_64.gppkg
 
 - name: bin_gpdb_centos7
-  type: s3
+  type: gcs
   source:
-    bucket: {{bucket-name}}
-    region_name: {{aws-region}}
-    access_key_id: {{bucket-access-key-id}}
-    secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: bin_gpdb_centos7/bin_gpdb.tar.gz
+    bucket: ((gcs-bucket-intermediates))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    versioned_file: gpdb_master/bin_gpdb_centos7/bin_gpdb.tar.gz
 
 # centtos 6
 
@@ -87,8 +85,8 @@ resources:
   type: gcs
   source:
     json_key: {{gcs-read-write-service-account-key}}
-    bucket: {{gcs-bucket-dev}}
-    versioned_file: plr/gpdb6/plr-rhel6.gppkg
+    bucket: {{gcs-bucket}}
+    versioned_file: plr/published/gpdb6/plr-rhel6.gppkg
 
 - name: plr_gpdb_centos6_release
   type: gcs
@@ -105,13 +103,11 @@ resources:
     regexp: plr/published/gpdb6/plr-(.*)-rhel6-x86_64.gppkg
 
 - name: bin_gpdb_centos6
-  type: s3
+  type: gcs
   source:
-    bucket: {{bucket-name}}
-    region_name: {{aws-region}}
-    access_key_id: {{bucket-access-key-id}}
-    secret_access_key: {{bucket-secret-access-key}}
-    versioned_file: bin_gpdb_centos/bin_gpdb.tar.gz
+    bucket: ((gcs-bucket-intermediates))
+    json_key: ((concourse-gcs-resources-service-account-key))
+    versioned_file: gpdb_master/bin_gpdb_centos6/bin_gpdb.tar.gz
 
 ## ======================================================================
 ## jobs
